fix(ui): align heading font family

--- a/apps/admin/src/scss/vuetify.scss
+++ b/apps/admin/src/scss/vuetify.scss
@@ -1,6 +1,7 @@
 @import "vuetify/src/styles/styles.sass";
 
 $body-font-family: Rubik, sans-serif;
+$heading-font-family: $body-font-family;
 
 $material-light: (
   'background': #f5f5f5,
